update apis https://bneibaruch.slack.com/archives/C0537EV685B/p1706004285118089
