# internal/api/router.go
@@ -18,10 +18,11 @@ func NewRouter(handler *Handler) http.Handler {
 	v1.GET("/bookmark", handler.GetUserBookmarks)
 	v1.DELETE("/bookmark/:bookmark_id", handler.DeleteUserBookmark)
 
-	v1.POST("/slide", handler.ImportSource)
+	//v1.POST("/slide", handler.ImportSource)
+	v1.POST("/slide", handler.AddSlides)
 	v1.GET("/slide", handler.GetSlides)
-	v1.PATCH("/slide", handler.UpdateSlide)
-	v1.DELETE("/slide/:slide_id", handler.DeleteSlide)
+	v1.PATCH("/slide", handler.UpdateSlides)
+	v1.DELETE("/slide", handler.DeleteSlides)
 
 	v1.GET("/author", handler.GetAuthors)
 
